--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     database:
         image: postgis/postgis:14-3.1-alpine
         restart: unless-stopped
-        container_name: blv-database
+        container_name: websocket-database
         ports:
             - "5432:5432"
         environment:
@@ -22,7 +22,7 @@ services:
             dockerfile: ./_docker/php/Dockerfile
         restart: unless-stopped
         user: ${UID}:${GID}
-        container_name: blv-app
+        container_name: websocket-app
         volumes:
             - ./:/var/www
             - ./docker/php/extend-php.ini:/user/local/etc/php/conf.d/extend-php.ini
@@ -35,7 +35,7 @@ services:
     webserver:
         image: nginx:1.21.4-alpine
         restart: unless-stopped
-        container_name: blv_webserver
+        container_name: websocket-webserver
         volumes:
             - ./:/var/www
             - ./_docker/nginx/conf.d:/etc/nginx/conf.d
