--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "laravel-echo": "^1.15.1",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.18",
+        "pusher-js": "^8.0.2",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
